--- a/index.html
+++ b/index.html
@@ -165,34 +165,6 @@
             color: #888;
         }
 
-        /* Zoom Control Styling */
-        .zoom-container {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            margin-bottom: 20px;
-            width: 100%;
-            max-width: 600px;
-        }
-
-        .zoom-container label {
-            font-size: 16px;
-            color: #333;
-            flex: 0 0 auto;
-        }
-
-        .zoom-container input[type="range"] {
-            flex: 1 1 auto;
-        }
-
-        .zoom-container span {
-            font-size: 16px;
-            color: #333;
-            flex: 0 0 auto;
-            width: 40px;
-            text-align: right;
-        }
-
         /* Button để nghe lại ý nghĩa */
         #speakButton {
             background-color: #17a2b8;
@@ -220,12 +192,6 @@
         </div>
         <img id="capturedImage" alt="Ảnh đã chụp">
         <canvas id="canvas" style="display: none;"></canvas>
-
-        <div class="zoom-container">
-            <label for="zoomSlider">Zoom:</label>
-            <input type="range" id="zoomSlider" min="1" max="3" step="0.1" value="1">
-            <span id="zoomValue">1x</span>
-        </div>
 
         <div class="button-container">
             <button id="captureButton" aria-label="Chụp ảnh" disabled>Chụp Ảnh</button>
@@ -265,8 +231,6 @@
         const signMeaning = document.getElementById('signMeaning');
         const loadingModel = document.getElementById('loadingModel');
         const loadingPrediction = document.getElementById('loadingPrediction');
-        const zoomSlider = document.getElementById('zoomSlider');
-        const zoomValue = document.getElementById('zoomValue');
         const speakButton = document.getElementById('speakButton');
         let stream = null;
         let isProcessing = false;
@@ -277,6 +241,7 @@
             "W.208": "Các xe đi trên đường có đặt biển số W.208 phải nhường đường cho xe đi trên đường ưu tiên..."
         };
 
+        // Khởi động camera
         async function startCamera() {
             try {
                 stream = await navigator.mediaDevices.getUserMedia({
@@ -296,6 +261,7 @@
             }
         }
 
+        // Chụp ảnh
         async function capturePhoto() {
             if (isProcessing) return;
             isProcessing = true;
@@ -303,7 +269,6 @@
 
             try {
                 const context = canvas.getContext('2d');
-                const zoom = parseFloat(zoomSlider.value);
                 const videoWidth = video.videoWidth;
                 const videoHeight = video.videoHeight;
 
@@ -311,14 +276,9 @@
                     throw new Error("Video chưa sẵn sàng.");
                 }
 
-                const scaledWidth = videoWidth / zoom;
-                const scaledHeight = videoHeight / zoom;
-                const sx = (videoWidth - scaledWidth) / 2;
-                const sy = (videoHeight - scaledHeight) / 2;
-
                 canvas.width = videoWidth;
                 canvas.height = videoHeight;
-                context.drawImage(video, sx, sy, scaledWidth, scaledHeight, 0, 0, videoWidth, videoHeight);
+                context.drawImage(video, 0, 0, videoWidth, videoHeight);
 
                 const imageDataURL = canvas.toDataURL('image/png');
                 capturedImage.src = imageDataURL;
@@ -343,6 +303,7 @@
             }
         }
 
+        // Tải ảnh xuống
         function downloadPhoto() {
             if (!capturedImage.src) return;
             const link = document.createElement('a');
@@ -353,6 +314,7 @@
             document.body.removeChild(link);
         }
 
+        // Chụp lại
         function retakePhoto() {
             capturedImage.style.display = 'none';
             capturedImage.style.opacity = 0;
@@ -366,9 +328,11 @@
             speakButton.style.display = 'none';
         }
 
+        // Hàm đọc văn bản
         function speakText(text) {
             if (!('speechSynthesis' in window)) {
                 console.warn('Trình duyệt của bạn không hỗ trợ Speech Synthesis.');
+                alert('Trình duyệt của bạn không hỗ trợ tính năng này.');
                 return;
             }
 
@@ -378,12 +342,22 @@
             const vietnameseVoices = voices.filter(voice => voice.lang.startsWith('vi'));
 
             if (vietnameseVoices.length > 0) {
-                utterThis.voice = vietnameseVoices[0];
+                // Chọn giọng đọc tiếng Việt tốt nhất (giọng nữ nếu có)
+                const femaleVoices = vietnameseVoices.filter(voice => voice.name.toLowerCase().includes('female') || voice.name.toLowerCase().includes('woman') || voice.name.toLowerCase().includes('nữ'));
+                utterThis.voice = femaleVoices.length > 0 ? femaleVoices[0] : vietnameseVoices[0];
+            } else {
+                alert('Không tìm thấy giọng đọc tiếng Việt. Vui lòng kiểm tra cài đặt trình duyệt của bạn.');
+                return;
             }
+
+            // Điều chỉnh tốc độ và cao độ để cải thiện chất lượng giọng đọc
+            utterThis.rate = 1;    // Tốc độ mặc định (0.1 - 10)
+            utterThis.pitch = 1;   // Cao độ mặc định (0 - 2)
 
             synth.speak(utterThis);
         }
 
+        // Tải mô hình
         async function loadModel() {
             try {
                 model = await tmImage.load(MODEL_URL + "model.json", MODEL_URL + "metadata.json");
@@ -395,6 +369,7 @@
             }
         }
 
+        // Nhận diện hình ảnh
         async function predictImage() {
             if (!model) {
                 predictionResult.textContent = "Mô hình chưa được tải. Vui lòng thử lại sau.";
@@ -408,16 +383,17 @@
                     prediction.sort((a, b) => b.probability - a.probability);
                     const topPrediction = prediction[0];
                     predictionResult.innerHTML = `<span style="color: #28a745;">Kết quả: ${topPrediction.className} (${(topPrediction.probability * 100).toFixed(2)}%)</span>`;
-                    const signCode = topPrediction.className.substring(0, 5).toUpperCase();
+                    const signCode = topPrediction.className.toUpperCase();
+
                     if (signMeanings.hasOwnProperty(signCode)) {
                         const meaningText = `Ý nghĩa: ${signMeanings[signCode]}`;
                         signMeaning.textContent = meaningText;
                         speakButton.style.display = 'inline-block';
-                        speakText(meaningText);
+                        // Không tự động đọc
                     } else {
                         signMeaning.textContent = "Ý nghĩa: Không tìm thấy ý nghĩa cho biển báo này.";
                         speakButton.style.display = 'inline-block';
-                        speakText("Không tìm thấy ý nghĩa cho biển báo này.");
+                        // Không tự động đọc
                     }
                 } else {
                     predictionResult.textContent = "Không có kết quả nhận diện.";
@@ -434,28 +410,29 @@
             }
         }
 
+        // Xử lý sự kiện nút
         captureButton.addEventListener('click', capturePhoto);
         downloadButton.addEventListener('click', downloadPhoto);
         retakeButton.addEventListener('click', retakePhoto);
-        zoomSlider.addEventListener('input', () => {
-            zoomValue.textContent = `${zoomSlider.value}x`;
-        });
         speakButton.addEventListener('click', () => {
-            const text = signMeaning.textContent || "";
+            const text = signMeaning.textContent.replace(/^Ý nghĩa:\s*/, '') || "";
             if (text) {
                 speakText(text);
             }
         });
 
+        // Đảm bảo danh sách giọng nói được cập nhật
         window.speechSynthesis.onvoiceschanged = function() {
             window.speechSynthesis.getVoices();
         };
 
+        // Khởi động ứng dụng
         window.addEventListener('load', async () => {
             await loadModel();
             startCamera();
         });
 
+        // Dừng camera khi đóng trang
         window.addEventListener('beforeunload', () => {
             if (stream) {
                 stream.getTracks().forEach(track => track.stop());
